cmake_minimum_required(VERSION 3.28)
project(CodeForces)

set(CMAKE_CXX_STANDARD 17)

add_executable(CodeForces
#        introduction_to_c_plus_plus_programming_language/main.cpp
#        featuresOfC++/main.cpp
#        allocationEtDésallocationDynamique/main.cpp
#        multithreadingByC++/main.cpp
#        basicsC++/main.cpp
#        switchCaseWithC++/main.cpp
#        constWithC++/main.cpp
#        variableGlobaletLocal/main.cpp
#        classDeStockageAuto/main.cpp
#        classDeStockageExtern/main.cpp
#        classDeStockageStatic/main.cpp
#        classDeStockageRegister/main.cpp
#        classDesStockageThreadLocal/main.cpp
#        staticVariableInc++/main.cpp
#        membreStaticDeClasse/main.cpp
#        staticMemberFunction/main.cpp
        cppDataType/main.cpp
)
