cmake_minimum_required(VERSION 3.28)
project(CodeForces)

set(CMAKE_CXX_STANDARD 17)

add_executable(CodeForces
#        introduction_to_c_plus_plus_programming_language/main.cpp
#        featuresOfC++/main.cpp
#        allocationEtDésallocationDynamique/main.cpp
#        multithreadingByC++/main.cpp
#        basicsC++/main.cpp
#        switchCaseWithC++/main.cpp
#        constWithC++/main.cpp
#        variableGlobaletLocal/main.cpp
#        classDeStockageAuto/main.cpp
#        classDeStockageExtern/main.cpp
#        classDeStockageStatic/main.cpp
#        classDeStockageRegister/main.cpp
#        classDesStockageThreadLocal/main.cpp
#        staticVariableInc++/main.cpp
#        membreStaticDeClasse/main.cpp
#        staticMemberFunction/main.cpp
#        cppDataType/main.cpp
#        functionDataType/main.cpp
#        arrayDataType/main.cpp
#        pointeurc++/main.cpp
#        refernece/main.cpp
#        staticCastingInC++/static_casting.cpp
#        dynamicCasting/main.cpp
#        constCasting/main.cpp
#        inputOutput/main.cpp
#        forIterator/main.cpp
#        forC++/main.cpp
#        doWhile/main.cpp
#        functions/main.cpp
#        tableauInFunctionC++/main.cpp
#        surchageFunction/main.cpp
#        friendFUnction/main.cpp
#        passParamsByValue/main.cpp
#        passParamsByRefernce/main.cpp
#        passParamsByPointer/main.cpp
#        valeurParDefault/main.cpp
#        recursion/main.cpp
#        XOGame/main.cpp
#        inlineFunction/main.cpp
#        InlineInFunctionAndClasse/main.cpp
#        lambdaFunction/main.cpp
#        LambdaFunction/main.cpp
#        classe_de_capture_labmdafunction/main.cpp
#        PointerIncrease/main.cpp
#        Pointers/main.cpp
#        applicationPointeur1/main.cpp
#        applicationPointeur2/main.cpp
#        applicationPointeur3/main.cpp
#        nullPointerType/main.cpp
#        reference/main.cpp
#        array/main.cpp
#        sizeOfArray/main.cpp
#        string/main.cpp
#        stringFunctions/main.cpp
#        strncmp/main.cpp/
#        strcpy/main.cpp
#        strrchr/main.cpp
#        strncat/main.cpp
#        stringStream/main.cpp
#        strsub/main.cpp
#        structureC++/main.cpp
#        Enumeration/main.cpp
#        declarationVariableINStruct/main.cpp
#        AreaStruct/main.cpp
#        self-referenceStruct/main.cpp
#        struct/main.cpp
#        typedef/main.cpp
#        malloc/main.cpp
#        calloc/main.cpp
#        realloc/main.cpp
#        new/main.cpp
#        newVsFreeVsMalloc/main.cpp
#        class/main.cpp
#        accessModifier/main.cpp
#        friendClass/main.cpp
#        friendFunction/main.cpp
#        defaultConstructor/main.cpp
#        studentClass/main.cpp
#         defaultContructorValue/main.cpp
#        constructorCopy/main.cpp
#        destructor/main.cpp
#        classString/main.cpp
#        privateDestructor/main.cpp
#        destructObj/main.cpp
#        InitializeObject/main.cpp
#        BoxClass/main.cpp
#        staticcDataConstructor/main.cpp
#        Student/main.cpp
#        staticFunction/main.cpp
#        TicTacTeo/main.cpp
#        Point/main.cpp
#        ExerciceChangeObj/main.cpp
#        nestedClass/main.cpp
        enumClass/main.cpp
)
